# vibelympics

round_1/: README.md
round_1/SignSpeakApp/: .dockerignore  Dockerfile  design_guidelines.md  nginx.conf  package.json  replit.md  tailwind.config.ts
round_1/SignSpeakApp/client/: index.html
round_1/SignSpeakApp/client/src/: App.tsx  index.css
round_1/SignSpeakApp/client/src/components/: ActionBar.tsx  CategoryTabs.tsx  EmojiGrid.tsx  FavoritesPopover.tsx  PhrasePanel.tsx  SignSpeakApp.tsx  TopBar.tsx
round_1/SignSpeakApp/client/src/components/examples/: ActionBarExample.tsx  CategoryTabsExample.tsx  TopBarExample.tsx  (+4 more)
round_1/SignSpeakApp/client/src/data/: categories.json  mappings.json
round_1/SignSpeakApp/client/src/hooks/: useLocalStorage.ts  useSpeechSynthesis.ts
round_1/SignSpeakApp/client/src/lib/: interpreter.ts
round_1/SignSpeakApp/server/: index.ts
round_2/: README.md
round_2/PkgAudit/: .gitignore  .replit  Dockerfile  Makefile  pyproject.toml  replit.md  requirements.txt
round_2/PkgAudit/.github/workflows/: ci.yml
round_2/PkgAudit/attached_assets/: Pasted-You-are-an-automated-developer-Create-a-complete-runnab_1765376037465.txt  Pasted-You-are-an-automated-developer-Create-a-complete-runnab_1765376112019.txt
round_2/PkgAudit/sample_reports/: express.json  left-pad.json  react.json
round_2/PkgAudit/src/: audit.py  cli.py  main.py  registry.py  tarball_scanner.py
round_2/PkgAudit/src/static/: styles.css
round_2/PkgAudit/src/templates/: index.html  report.html
round_2/PkgAudit/tests/: __init__.py  test_audit.py  test_integration.py
